--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,8 @@
-*.class
-*.log
-
-# sbt specific
-dist/*
 target/
-lib_managed/
-src_managed/
-project/boot/
-project/plugins/project/
+*.ipr
+*.iml 
+*.iws
+.idea
+.idea_modules
 
-# Scala-IDE specific
-.scala_dependencies
+.DS_Store
